# web-developers-crew

./: README.md  pyproject.toml  report.md
.cache/: books_cache.json
.cursor/: prompts.json
demos/: first-successful-run.md
output/: global.css  index.html  script.js  style.css
output/books/: frontend_engineer.json  index.css  index.html  index.js
src/web_developers_crew/: crew.py  main.py
src/web_developers_crew/config/: agents.yaml  tasks.yaml
src/web_developers_crew/templates/: base.html  structure.html
src/web_developers_crew/templates/example/: index.css  index.html  index.js
src/web_developers_crew/utils/: cache_inspector.py  cache_manager.py  output_handler.py  template_manager.py
