[project]
name = "web_developers_crew"
version = "0.1.0"
description = "web-developers-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.79.0,<1.0.0"
]

[project.scripts]
web_developers_crew = "web_developers_crew.main:run"
run_crew = "web_developers_crew.main:run"
train = "web_developers_crew.main:train"
replay = "web_developers_crew.main:replay"
test = "web_developers_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
