[project]
name = "web_developers_crew"
version = "0.1.0"
description = "web-developers-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.79.0,<1.0.0"
]

[project.scripts]
web_developers_crew = "web_developers_crew.main:main"
run_crew = "web_developers_crew.main:main"
clear_cache = "web_developers_crew.main:clear_cache"
run_frontend = "web_developers_crew.main:run_frontend"
train = "web_developers_crew.main:train"
replay = "web_developers_crew.main:replay"
test = "web_developers_crew.main:test"
inspect_cache = "web_developers_crew.main:inspect_cache"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
